--- a/firmware/rp2040-step-test/Cargo.toml
+++ b/firmware/rp2040-step-test/Cargo.toml
@@ -16,6 +16,11 @@ panic-probe = { version = "0.3", features = ["print-defmt"] }
 # We're using a Pico by default on this template
 rp-pico = "0.8"
 
+usbd-serial = "0.1.1"
+usb-device = "0.2.9"
+usbd-picotool-reset = "0.2.0"
+heapless = "0.8.0"
+
 # but you can use any BSP. Uncomment this to use the pro_micro_rp2040 BSP instead
 # sparkfun-pro-micro-rp2040 = "0.6"
 
