--- a/firmware/rp2040-step-test/Cargo.toml
+++ b/firmware/rp2040-step-test/Cargo.toml
@@ -21,6 +21,8 @@ usb-device = "0.2.9"
 usbd-picotool-reset = "0.2.0"
 heapless = "0.8.0"
 
+split_flap_device = { path = "../split_flap_device" }
+
 # but you can use any BSP. Uncomment this to use the pro_micro_rp2040 BSP instead
 # sparkfun-pro-micro-rp2040 = "0.6"
 
